--- a/tree_volume.ipynb
+++ b/tree_volume.ipynb
@@ -21,13 +21,22 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Subject to the constraint that $\\alpha\\in[0,1]$.\n",
+    "Subject to the constraint that $\\alpha\\in[0,1]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c20a764f-8065-41a7-856f-c73086c67857",
+   "metadata": {},
+   "source": [
+    "To represent this in matrix notation, Let $V=\\begin{pmatrix}V_1 \\\\ V_2 \\\\ \\vdots \\\\ V_N\\end{pmatrix}$ and $hR^2 = \\begin{pmatrix}h_1R_1^2 \\\\ h_2R_2^2 \\\\ \\vdots \\\\ h_NR_N^2\\end{pmatrix}$\n",
     "\n",
     "Putting this all together, we have:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "    \\min \\|V_i\\|\n",
+    "    \\min \\|V - \\frac{h}{3}\\pi R^2(1+\\alpha+\\alpha^2)\\| \\\\\n",
+    "    \\text{s.t. }0\\leq\\alpha\\leq 1\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
