--- a/tree_volume.ipynb
+++ b/tree_volume.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b96baf42-a11e-424c-9df8-233b68690efb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e10377cc-e017-4217-9875-112e2fcae6dc",
    "metadata": {},
@@ -17,11 +28,10 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "    \\min \\sum_{i=1}^N \\left(V_i - \\frac{h_i}{3}\\pi R_i^2(1+\\alpha+\\alpha^2)\\right)^2\n",
+    "    \\min &\\sum_{i=1}^N \\left(V_i - \\frac{h_i}{3}\\pi R_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
+    "    \\text{s.t. }&\\alpha\\in[0,1]\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "Subject to the constraint that $\\alpha\\in[0,1]$."
+    "$$"
    ]
   },
   {
@@ -35,12 +45,28 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "    \\min \\|V - \\frac{h}{3}\\pi R^2(1+\\alpha+\\alpha^2)\\| \\\\\n",
-    "    \\text{s.t. }0\\leq\\alpha\\leq 1\n",
+    "    \\min &\\|V - \\frac{h}{3}\\pi R^2(1+\\alpha+\\alpha^2)\\|_2^2 \\\\\n",
+    "    \\text{s.t. }&0\\leq\\alpha\\leq 1\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
     "Solutions $\\alpha\\in \\mathbb R$, with $\\alpha\\in [0,1]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7373ea05-4972-4c21-b593-45827ded9aa6",
+   "metadata": {},
+   "source": [
+    "## Adding Species"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1583fe5-de64-46b8-8d77-a7e02dc2c5b9",
+   "metadata": {},
+   "source": [
+    "One-hot encoding for species type."
    ]
   },
   {
@@ -49,12 +75,35 @@
    "id": "b3cccc33-007b-4e50-9278-05603941040f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Example data\n",
+    "\n",
+    "species = [\"cherry\", \"cherry\", \"teak\"]\n",
+    "df = pd.DataFrame(species, columns=[\"Species\"])\n",
+    "df.join(pd.get_dummies(df, columns=[\"Species\"], dtype=int)).rename(columns={\"Species_cherry\": \"ind1\", \"Species_teak\": \"ind2\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d862ced-b282-4460-94f4-be34353f13e8",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\text{Here is a WRONG way to represent an additive effect per species}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "    \\min &\\sum_{i=1}^N \\left(V_i - \\frac{h_i}{3}\\pi R_i^2(1+\\alpha+\\alpha^2)-\\beta_i S_i\\right)^2\\\\\n",
+    "    \\text{s.t. }&\\alpha\\in[0,1]\n",
+    "\\end{align}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d1463b4-45f1-45ae-804f-6d420fb69c18",
+   "id": "873cf32c-201b-4466-8254-f26bf17e97b6",
    "metadata": {},
    "outputs": [],
    "source": []
