--- a/1_optimization_analysis.ipynb
+++ b/1_optimization_analysis.ipynb
@@ -8,14 +8,46 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import cvxpy as cp"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e10377cc-e017-4217-9875-112e2fcae6dc",
+   "id": "e56d7814-431f-4afb-8cf0-dc9a83b66563",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Modeling Trees as Truncated Cones using Convex Optmization\n",
+    "\n",
+    "The purpose of this notebook is to fit the truncated cone model introduced in the previous notebook using convex optimization. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52c88d2a-eb62-4131-9d34-701e55463577",
+   "metadata": {},
+   "source": [
+    "## Model Formulation\n",
+    "\n",
+    "$$\n",
+    "V = \\frac{1}{3}\\pi (r_1^2+r_1r_2+r_2^2)h\n",
+    "$$\n",
+    "\n",
+    "Where $V$ is the observed volume of the tree and $h$ is the observed height. Then, $r_1$ and $r_2$ are the radii of the base and top of the cone, respectively.\n",
+    "\n",
+    "We will consider the upper radius to be a fraction of the lower radius. So, we introduce a parameter $\\alpha$ where $r_2 = \\alpha r_1, \\text{ for }\\alpha \\in (0,1)$. We will use a grid search to find an alpha that minimizes the fitted sum of squares. Let the lower tree radius be $r$ and the upper be $r_2$. Since $r_2 = \\alpha r$, we can write the volume as:\n",
+    "\n",
+    "$$\n",
+    "V = \\frac{1}{3}\\cdot h\\cdot\\pi\\cdot r^2(1+\\alpha+\\alpha^2), \\;\\alpha\\in(0,1)\n",
+    "$$\n",
+    "\n",
+    "Formulating this as an optimization problem, we seek to minimize the sum of squares of the residuals.\n",
+    "\n",
+    "\\begin{align}\n",
+    "    \\min &\\sum_{i=1}^N \\left(V_i - \\frac{h_i}{3}\\pi r_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
+    "    \\text{s.t. }&\\alpha\\in[0,1]\n",
+    "\\end{align}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,39 +71,18 @@
    "id": "c20a764f-8065-41a7-856f-c73086c67857",
    "metadata": {},
    "source": [
-    "To represent this in matrix notation, Let $V=\\begin{pmatrix}V_1 \\\\ V_2 \\\\ \\vdots \\\\ V_N\\end{pmatrix}$ and $hR^2 = \\begin{pmatrix}h_1R_1^2 \\\\ h_2R_2^2 \\\\ \\vdots \\\\ h_NR_N^2\\end{pmatrix}$\n",
+    "To represent this in matrix notation, Let $V=\\begin{pmatrix}V_1 \\\\ V_2 \\\\ \\vdots \\\\ V_N\\end{pmatrix}$ and $hr^2 = \\begin{pmatrix}h_1r_1^2 \\\\ h_2r_2^2 \\\\ \\vdots \\\\ h_Nr_N^2\\end{pmatrix}$\n",
     "\n",
     "Putting this all together, we have:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "    \\min &\\|V - \\frac{h}{3}\\pi R^2(1+\\alpha+\\alpha^2)\\|_2^2 \\\\\n",
+    "    \\min &\\|V - \\frac{h}{3}\\pi r^2(1+\\alpha+\\alpha^2)\\|_2^2 \\\\\n",
     "    \\text{s.t. }&0\\leq\\alpha\\leq 1\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Solutions $\\alpha\\in \\mathbb R$, with $\\alpha\\in [0,1]$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f9341de-4bf8-4fab-91c1-2664c636b5e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e56d7814-431f-4afb-8cf0-dc9a83b66563",
-   "metadata": {},
-   "source": [
-    "# Modeling Trees as Truncated Cones using Convex Optmization\n",
-    "\n",
-    "The purpose of this notebook is to fit the truncated cone model introduced in the previous notebook using convex optimization. "
+    "Solutions $\\alpha\\in \\mathbb r$, with $\\alpha\\in [0,1]$"
    ]
   },
   {
@@ -89,7 +100,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_csv(\"trees.csv\").head()"
+    "trees = pd.read_csv(\"trees.csv\")\n",
+    "trees.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "652a0436-227a-48aa-9306-5b3c267b94b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = (trees.d/2).to_numpy() # DBH Divided by height\n",
+    "h = trees.h.to_numpy()\n",
+    "V = trees.v.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9b25b25-a3d2-4104-aa85-d847a03c6859",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = cp.Variable(1, pos=True) # alpha parameter, target of interest"
    ]
   },
   {
@@ -98,6 +132,21 @@
    "metadata": {},
    "source": [
     "## Optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "257c07fe-92e7-4d8f-af3f-b79a7b51ad8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(6596) # NLP CU Denver Course number used as seed\n",
+    "\n",
+    "objective=cp.sum_squares(V-h/3*np.pi*r**2*(1+a+a**2)) # Objective Function\n",
+    "constraints = [a>= 0, a<=1]\n",
+    "prob = cp.Problem(cp.Minimize(objective), constraints)\n",
+    "prob.solve()"
    ]
   },
   {
@@ -172,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
