--- a/1_optimization_analysis.ipynb
+++ b/1_optimization_analysis.ipynb
@@ -38,15 +38,17 @@
     "We will consider the upper radius to be a fraction of the lower radius. So, we introduce a parameter $\\alpha$ where $r_2 = \\alpha r_1, \\text{ for }\\alpha \\in (0,1)$. We will use a grid search to find an alpha that minimizes the fitted sum of squares. Let the lower tree radius be $r$ and the upper be $r_2$. Since $r_2 = \\alpha r$, we can write the volume as:\n",
     "\n",
     "$$\n",
-    "V = \\frac{1}{3}\\cdot h\\cdot\\pi\\cdot r^2(1+\\alpha+\\alpha^2), \\;\\alpha\\in(0,1)\n",
+    "V_i = \\frac{1}{3}\\cdot \\pi h_i r_i^2(1+\\alpha+\\alpha^2), \\;\\alpha\\in(0,1), i=1, ..., N\n",
     "$$\n",
+    "\n",
+    "Where $V_i$ is the observed volume of the $i$th tree, where $i$ equals $1, ..., N$ where $N$ is the total number of observations.\n",
     "\n",
     "Formulating this as an optimization problem, we seek to minimize the sum of squares of the residuals.\n",
     "\n",
-    "\\begin{align}\n",
-    "    \\min &\\sum_{i=1}^N \\left(V_i - \\frac{h_i}{3}\\pi r_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
+    "\\begin{align*}\n",
+    "    \\min &\\sum_{i=1}^N \\left(V_i - \\pi\\frac{h_i}{3} r_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
     "    \\text{s.t. }&\\alpha\\in[0,1]\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -59,10 +61,10 @@
     "We want to minimize the sum of squared residuals, so our loss function is:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
-    "    \\min &\\sum_{i=1}^N \\left(V_i - \\frac{h_i}{3}\\pi R_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
+    "\\begin{align*}\n",
+    "    \\min &\\sum_{i=1}^N \\left(V_i - \\pi\\frac{h_i}{3} R_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
     "    \\text{s.t. }&\\alpha\\in[0,1]\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -76,13 +78,38 @@
     "Putting this all together, we have:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
-    "    \\min &\\|V - \\frac{h}{3}\\pi r^2(1+\\alpha+\\alpha^2)\\|_2^2 \\\\\n",
+    "\\begin{align*}\n",
+    "    \\min &\\|V - \\pi\\frac{h}{3} r^2(1+\\alpha+\\alpha^2)\\|_2^2 \\\\\n",
     "    \\text{s.t. }&0\\leq\\alpha\\leq 1\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
-    "Solutions $\\alpha\\in \\mathbb r$, with $\\alpha\\in [0,1]$"
+    "Solutions $\\alpha\\in \\mathbb R$, with $\\alpha\\in [0,1]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c327eed-35cd-40e5-ac5e-bdc0ec79031f",
+   "metadata": {},
+   "source": [
+    "### Code-Friendly Formulation\n",
+    "\n",
+    "We seek to write the minimation problem in the form $\\min (Ax-b)$ to play nice with `cvxpy`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5f48213-45bd-4289-a411-957ee86d5b1d",
+   "metadata": {},
+   "source": [
+    "First, since $1+\\alpha+\\alpha^2$ is one-to-one over $[0,1]$, we can define $a=1+\\alpha+\\alpha^2$ and then use the value of $a$ to uniquely solve for $\\alpha$. Then, if $\\alpha\\in[0,1]$, we know that $1+\\alpha+\\alpha^2$ is in the interval $[1, 3]$, so we convert the constraint from the previous problem to $a\\in[1,3]$\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "    \\min &\\|\\pi\\frac{h}{3} r^2 a - V\\|_2^2 \\\\\n",
+    "    \\text{s.t. }&1\\leq a \\leq 3\n",
+    "\\end{align*}\n",
+    "$$"
    ]
   },
   {
@@ -143,10 +170,67 @@
    "source": [
     "np.random.seed(6596) # NLP CU Denver Course number used as seed\n",
     "\n",
-    "objective=cp.sum_squares(V-h/3*np.pi*r**2*(1+a+a**2)) # Objective Function\n",
-    "constraints = [a>= 0, a<=1]\n",
+    "objective=cp.sum_squares(h/3*np.pi*r**2 * a - V) # Objective Function\n",
+    "constraints = [a>= 1, a<=3]\n",
     "prob = cp.Problem(cp.Minimize(objective), constraints)\n",
     "prob.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30677a82-8400-4f87-9828-78125deacd22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9369ad23-2336-4872-b03c-b8695958e9a5",
+   "metadata": {},
+   "source": [
+    "### Final Optimization Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45a7399e-1c9c-459e-bae1-969215c6d7c8",
+   "metadata": {},
+   "source": [
+    "Using the optmized value of $a$, we solve for the unique value of $\\alpha$ by first setting up a quadratic root problem:\n",
+    "\n",
+    "$$\n",
+    "1+\\alpha+\\alpha^2 = a\n",
+    "$$\n",
+    "\n",
+    "Then, we use the quadratic formula and ignore the negative root that would correspond to an $\\alpha$ outside of $[0,1]$.\n",
+    "\n",
+    "$$\n",
+    "\\frac{-1\\pm\\sqrt{1-4*1*(1-a)}}{2}\n",
+    "$$\n",
+    "\n",
+    "We calculate with code below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abfaee12-6e91-459b-bd12-1329046a50dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print((-1+np.sqrt(1-4*(1-a.value)))/2)\n",
+    "print((-1-np.sqrt(1-4*(1-a.value)))/2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7b95a77-6050-46eb-ac63-85dd14d81898",
+   "metadata": {},
+   "source": [
+    "Therefore, the final estimate of $\\alpha$ is $0.13995219$, or roughly $0.14$. Connecting this back to the physical problem, that means that if we represent a tree trunk as a truncated cone with a known lower radius $r$, the volume of the tree will be approximated best by using an upper radius of $0.14*r$."
    ]
   },
   {
@@ -162,7 +246,7 @@
    "id": "a1583fe5-de64-46b8-8d77-a7e02dc2c5b9",
    "metadata": {},
    "source": [
-    "One-hot encoding for species type."
+    "In the absence of data from multiple species, I will generate random species labels for my existing dataset and use that for modeling. In theory, there should be zero effect from species, since the species labels are generated randomly and have no relation to the outcome variable of volume."
    ]
   },
   {
@@ -172,11 +256,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example data\n",
+    "# Randomly generate species\n",
+    "np.random.seed(6596) # NLP CU Denver Course number used as seed\n",
+    "trees['species'] = np.random.randint(2, size=len(trees))\n",
+    "trees.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5da7f07-37c2-4c7f-85db-7a9822daa136",
+   "metadata": {},
+   "source": [
+    "We introduce a simple additive effect from species, denoted $\\beta$. So we modify the original volume formula by adding a parameter by adding $\\beta$ times the species label. Suppose $S_i$ is the species of observation $i$. Then the volume formula of the truncated cone with an additive constant effect from species, we get:\n",
     "\n",
-    "species = [\"cherry\", \"cherry\", \"teak\"]\n",
-    "df = pd.DataFrame(species, columns=[\"Species\"])\n",
-    "df.join(pd.get_dummies(df, columns=[\"Species\"], dtype=int)).rename(columns={\"Species_cherry\": \"ind1\", \"Species_teak\": \"ind2\"})"
+    "$$\n",
+    "V_i = \\frac{1}{3}\\cdot \\pi h_i r_i^2(1+\\alpha+\\alpha^2)+\\beta S_i, \\;\\alpha\\in(0,1), i = 1, ..., N\n",
+    "$$"
    ]
   },
   {
@@ -185,21 +280,165 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\text{Here is a WRONG way to represent an additive effect per species}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "    \\min &\\sum_{i=1}^N \\left(V_i - \\frac{h_i}{3}\\pi R_i^2(1+\\alpha+\\alpha^2)-\\beta_i S_i\\right)^2\\\\\n",
-    "    \\text{s.t. }&\\alpha\\in[0,1]\n",
-    "\\end{align}\n",
+    "\\begin{align*}\n",
+    "    \\min &\\|\\frac{h}{3}\\pi r^2 a + \\beta S - V\\|_2^2 \\\\\n",
+    "    \\text{s.t. }&1\\leq a \\leq 3\n",
+    "\\end{align*}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "797c37cf-ef42-4d45-8489-5587d32279a5",
+   "metadata": {},
+   "source": [
+    "We solve this problem with `cvxpy`. We again transform $a$ back into the parameter $\\alpha$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "873cf32c-201b-4466-8254-f26bf17e97b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = (trees.d/2).to_numpy() # DBH Divided by height\n",
+    "h = trees.h.to_numpy()\n",
+    "V = trees.v.to_numpy()\n",
+    "S = trees.species.to_numpy()\n",
+    "a = cp.Variable(1, pos=True) # alpha parameter, target of interest\n",
+    "b = cp.Variable(1) # beta parameter, additivie species effect\n",
+    "np.random.seed(6596) # NLP CU Denver Course number used as seed\n",
+    "\n",
+    "objective=cp.sum_squares(h/3*np.pi*r**2 * a+b*S - V) # Objective Function\n",
+    "constraints = [a>= 1, a<=3]\n",
+    "prob = cp.Problem(cp.Minimize(objective), constraints)\n",
+    "prob.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db474ec7-ef50-4075-bde7-7d7d0f31a963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Alpha Value: {(-1+np.sqrt(1-4*(1-a.value)))/2}\")\n",
+    "print(f\"Beta value: {b.value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "203d0a81-320a-447b-8b9d-eb0a46790e98",
+   "metadata": {},
+   "source": [
+    "We expected the $\\beta$ parameter value to be zero, since there is no actual effect from species. But this effect is small relative to the average observed volume of a tree and the average fitted volume from the truncated cone model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c4192e0-0078-4b51-8f8c-e5b5d57505b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Average Observed Volume: {trees.v.mean()}\")\n",
+    "print(f\"Optimized Species Effect: {b.value[0]}\")\n",
+    "print(f\"Species Effect, Percent of Average Volume: {100*b.value[0]/trees.v.mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2bc8e49-7d12-40dd-8ba5-6f518f23e0c9",
+   "metadata": {},
+   "source": [
+    "So even though the parameter $\\beta$ is nonzero, the optmized value represents less than 1% of the average tree volume.\n",
+    "\n",
+    "As a further check, we repeat the randomly species labeling 1,000 times and examine the resulting $\\beta$ values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20816c51-1367-4f8e-8556-a75c934542cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(6596) # NLP CU Denver Course number used as seed\n",
+    "nreps = 1000\n",
+    "betas = np.zeros(nreps) # initialize vector of beta valuees\n",
+    "for i in range(0, nreps):\n",
+    "    trees['species'] = np.random.randint(2, size=len(trees)) # randomly assign species labels\n",
+    "    S = trees.species.to_numpy() # re-extract species label to array\n",
+    "    a = cp.Variable(1, pos=True) # re-declare beta parameter\n",
+    "    b = cp.Variable(1) # re-declare beta parameter\n",
+    "    objective=cp.sum_squares(h/3*np.pi*r**2 * a+b*S - V) # Objective Function\n",
+    "    constraints = [a>= 1, a<=3]\n",
+    "    # Solve problem\n",
+    "    prob = cp.Problem(cp.Minimize(objective), constraints)\n",
+    "    prob.solve()\n",
+    "    # Extract beta value for this iteration\n",
+    "    betas[i]=b.value[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f48240a-7f8a-4ae8-8898-66ceddab6506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Average Beta Value: {betas.mean()}\")\n",
+    "print(f\"Average Beta Value as Percent of Mean Volume: {100*betas.mean() / trees.v.mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "993ac095-552a-45ef-ba3f-753a34ffcff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.hist(betas)\n",
+    "plt.title(\"Distribution of Beta Parameter\")\n",
+    "plt.xlabel(\"Beta\")\n",
+    "plt.ylabel(\"Frequency\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3b6d519-9bd7-4092-81a4-185b7c12d9d4",
+   "metadata": {},
+   "source": [
+    "The resulting distribution of $\\beta$ values is centered on zero and has a roughly normal distribution. This matches what we would expect theoretically."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28456995-8907-4c75-8909-e8618f5feecc",
+   "metadata": {},
+   "source": [
+    "## Discussion and Further Research"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "704d985d-fe7c-4de7-8161-31dfd6b233f4",
+   "metadata": {},
+   "source": [
+    "This report shows how to solve a geometrically formulated estimate of tree volume, given the typical forestry field measurements of tree diameter and height. This formulation of a volume model has advantages over standard statistical approaches in a few ways. First, the basic truncated cone model has only one uncertain parameter, while typical linear regression methods would use up degrees of freedom estimating typically 4 or more paramters (one each for height, diameter, random error, and a constant mean effect). Second, the geometrically inspired model gives potentially more physical insight. The truncated cone formulation can be used to get a natural estimate of surface area of the tree, for example. The surface area of a tree might be a useful value to estimate, if for instance the logs were to be painted or wrapped in some material and you wanted an estimate of how much you would need. A standard linear regression model would provide zero estimate of surface area. \n",
+    "\n",
+    "This report shows how an effect from species could be added, given more data for different tree species. Numerical experimentation above shows that if species labels are random, and thus have no relationship with volume, the resulting estimates of the additive effect from species vary about the expected value of zero with a roughly normal distribution.\n",
+    "\n",
+    "This project could be developed and extended to a scientific contribution to forestry modeling. First, we could collect more data, preferrably the data used to develop models published in the academic literature and cited in the references of this report. Next, we could compare the truncated cone volume model to the various other models in the literature. Preliminary investigation shows that the truncated cone volume model fits this data of 31 cherry trees more accurately and with less uncertainty of relevant parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09edc734-83b4-40f9-aa82-2e785a6f06ea",
    "metadata": {},
    "outputs": [],
    "source": []
