--- a/0_data_regression.ipynb
+++ b/0_data_regression.ipynb
@@ -153,7 +153,13 @@
     "\n",
     "Where $r_1$ and $r_2$ are the radii of the base and top of the cone, respectively.\n",
     "\n",
-    "We will consider the upper radius to be a fraction of the lower radius. So, we introduce a parameter $\\alpha$ where $r_2 = \\alpha r_1, \\text{ for }\\alpha \\in (0,1)$. We will use a grid search to find an alpha that minimizes the fitted sum of squares."
+    "We will consider the upper radius to be a fraction of the lower radius. So, we introduce a parameter $\\alpha$ where $r_2 = \\alpha r_1, \\text{ for }\\alpha \\in (0,1)$. Rearranging algebraically, we have:\n",
+    "\n",
+    "$$\n",
+    "V = \\frac{1}{3}\\cdot h\\cdot\\pi\\cdot r^2(1+\\alpha+\\alpha^2), \\;\\alpha\\in(0,1)\n",
+    "$$\n",
+    "\n",
+    "We will use a grid search to find an alpha that minimizes the fitted sum of squares."
    ]
   },
   {
