--- a/1_optimization_analysis.ipynb
+++ b/1_optimization_analysis.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import cvxpy as cp"
+    "import cvxpy as cp\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels.api as sm"
    ]
   },
   {
@@ -24,10 +26,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b167f2b-50ad-4710-a8ed-d415b153a5ec",
+   "metadata": {},
+   "source": [
+    "## Intro\n",
+    "\n",
+    "It is a common practice in forestry to estimate tree volume from measurements of tree diameter (DBH) and height. This topic is of key interest to researchers and industry. In forestry, it is economically valuable to have a reliable estimate of usable timber in a stand of trees that might take years to mature. In researching climate change, it is valuable to know how much carbon trees can sequester, which is related to the volume of the tree.  \n",
+    "\n",
+    "The purpose of this notebook is to present a model of tree volume based on the geometry of a truncated cone. For more on the standard regression approaches to the problem, see the previous notebook. The data used will be the Trees dataset built-in to the R programming language.\n",
+    "\n",
+    "All code can be found on: https://github.com/jh-206/Tree-Volume"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "52c88d2a-eb62-4131-9d34-701e55463577",
    "metadata": {},
    "source": [
     "## Model Formulation\n",
+    "\n",
+    "The volume observations in the data is sometimes referred to as \"merchantable volume\". It is found by removing branches from trunk of the tree, and the final volume value is directly related to the amount of usable timber in the trunk of the tree. For these reasons, the trunk looks like a big truncated cone. A truncated cone is defined by a lower radius and an upper radius.\n",
     "\n",
     "$$\n",
     "V = \\frac{1}{3}\\pi (r_1^2+r_1r_2+r_2^2)h\n",
@@ -56,13 +74,13 @@
    "id": "a38042a7-2e5d-45e8-a4e0-9d73e1e11efc",
    "metadata": {},
    "source": [
-    "Observed constants radius ($R_i$), height ($h_i$), and volume ($V_i$), for $i=1, ..., N$.\n",
+    "The observed values are radius ($r_i$), height ($h_i$), and volume ($V_i$), for $i=1, ..., N$. Here, $N$ is the total number of observations (31 for the trees dataset).\n",
     "\n",
     "We want to minimize the sum of squared residuals, so our loss function is:\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "    \\min &\\sum_{i=1}^N \\left(V_i - \\pi\\frac{h_i}{3} R_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
+    "    \\min &\\sum_{i=1}^N \\left(V_i - \\pi\\frac{h_i}{3} r_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
     "    \\text{s.t. }&\\alpha\\in[0,1]\n",
     "\\end{align*}\n",
     "$$"
@@ -84,7 +102,7 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "Solutions $\\alpha\\in \\mathbb R$, with $\\alpha\\in [0,1]$"
+    "Where solutions are scalar values $\\alpha\\in \\mathbb R$, with $\\alpha\\in [0,1]$"
    ]
   },
   {
@@ -102,7 +120,7 @@
    "id": "b5f48213-45bd-4289-a411-957ee86d5b1d",
    "metadata": {},
    "source": [
-    "First, since $1+\\alpha+\\alpha^2$ is one-to-one over $[0,1]$, we can define $a=1+\\alpha+\\alpha^2$ and then use the value of $a$ to uniquely solve for $\\alpha$. Then, if $\\alpha\\in[0,1]$, we know that $1+\\alpha+\\alpha^2$ is in the interval $[1, 3]$, so we convert the constraint from the previous problem to $a\\in[1,3]$\n",
+    "First, since $1+\\alpha+\\alpha^2$ is one-to-one over $[0,1]$, we can define $a=1+\\alpha+\\alpha^2$ and then use the optimal value of $a$ to uniquely solve for $\\alpha$. Then, if $\\alpha\\in[0,1]$, we know that $1+\\alpha+\\alpha^2$ is in the interval $[1, 3]$, so we convert the constraint from the previous problem to $a\\in[1,3]$\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
@@ -231,6 +249,120 @@
    "metadata": {},
    "source": [
     "Therefore, the final estimate of $\\alpha$ is $0.13995219$, or roughly $0.14$. Connecting this back to the physical problem, that means that if we represent a tree trunk as a truncated cone with a known lower radius $r$, the volume of the tree will be approximated best by using an upper radius of $0.14*r$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5aa05a7-5685-4a9e-aacc-4e980038d759",
+   "metadata": {},
+   "source": [
+    "## Error and Uncertainty Analysis\n",
+    "\n",
+    "To estimate the error associated with the model, and additionally to produce a confidence interval for the alpha parameter, we perform the following cross validation procedure: for 1,000 replications, split the data into an 80/20 percentage split, find the optimal parameter for the training set, and calculate the error when using that optimal parameter to predict new data. (Note: this is a form of cross-validation sometimes called Monte Carlo CV. There are more elegant coding approaches to this, but I think this is good for clearly demonstrating the technique.)\n",
+    "\n",
+    "Koirala etal 2017 arrived at the following model specification after testing various formulations:\n",
+    "$$\n",
+    "V = \\beta_0+\\beta_1\\cdot d + \\beta_2\\cdot d^2\\cdot h \n",
+    "$$\n",
+    "\n",
+    "The model therefore has 3 uncertain parameters, and a 4th if you add estimating the random error variance that is typical in linear regression models. This model will be compared to the truncated cone model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d5fea14-c0ca-4ad4-bb29-ccdcb110a6fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nreps = 1000\n",
+    "alphas = np.zeros(nreps) # initialize array of parameters\n",
+    "rmses = np.zeros(nreps) # initialize array of RMSE errors\n",
+    "rmses_lm = np.zeros(nreps) # initialize array of RMSE errors\n",
+    "np.random.seed(123)\n",
+    "\n",
+    "for i in range(0, nreps):\n",
+    "    # print(\"~\"*40)\n",
+    "    # print(f\"Iteration {i}\")\n",
+    "    # print(f\"Seed: {}\")\n",
+    "    # Split Data\n",
+    "    np.random.seed()\n",
+    "    inds = np.random.choice([0, 1], size=len(trees), p=[0.8, 0.2]) # generate labels for train/test\n",
+    "    train = trees[inds == 0]\n",
+    "    test = trees[inds == 1]\n",
+    "    # Find optimal param\n",
+    "    r = (train.d/2).to_numpy() # DBH Divided by height\n",
+    "    h = train.h.to_numpy()\n",
+    "    V = train.v.to_numpy()\n",
+    "    a = cp.Variable(1, pos=True) # alpha parameter, target of interest\n",
+    "    np.random.seed(6596) # NLP CU Denver Course number used as seed\n",
+    "    objective=cp.sum_squares(h/3*np.pi*r**2 * a - V) # Objective Function\n",
+    "    constraints = [a>= 1, a<=3]\n",
+    "    prob = cp.Problem(cp.Minimize(objective), constraints)\n",
+    "    temp = prob.solve()\n",
+    "    alphas[i] = (-1+np.sqrt(1-4*(1-a.value[0])))/2\n",
+    "\n",
+    "    # LM Model\n",
+    "    X = train[[\"d\", \"h\"]].copy()\n",
+    "    X=X.assign(d2h = X['d']**2 * X['h'])\n",
+    "    X[\"const\"] = np.ones(X.shape[0])\n",
+    "    lm = sm.OLS(train.v, X).fit()\n",
+    "    X_test = test[[\"d\", \"h\"]].copy()\n",
+    "    X_test=X_test.assign(d2h = X_test['d']**2 * X_test['h'])\n",
+    "    X_test[\"const\"] = np.ones(X_test.shape[0])\n",
+    "    \n",
+    "    # Predict and calculate error\n",
+    "    preds = test['h']/3*np.pi*(test['d']/2)**2 * a.value[0]\n",
+    "    rmses[i] = np.sqrt(np.sum((preds-test.v)**2))\n",
+    "\n",
+    "    preds2 = lm.predict(X_test)\n",
+    "    rmses_lm[i] = np.sqrt(np.sum((preds2-test.v)**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c92c9cf-83d8-4cde-9540-d5f8281797b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Mean Alpha: {alphas.mean()}\")\n",
+    "print(f\"95% CI Alpha: {np.percentile(alphas, 2.5), np.percentile(alphas, 97.5)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6e877d3-f807-4e9b-bf5d-bb1a265fe665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(alphas)\n",
+    "plt.xlabel(\"Alpha\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa5f1bfb-bd1f-4fb5-8181-3c4aa827a162",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"T.Cone Mean RMSE: {rmses.mean()}\")\n",
+    "print(f\"LM Mean RMSE: {rmses_lm.mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cada745d-4ac5-4f78-af5d-4424dcce12c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame({\n",
+    "    'Model' : [\"T. Cone\", \"Lin Reg\"],\n",
+    "    'Test RMSE' : np.round([rmses.mean(), rmses_lm.mean()], 3)\n",
+    "})"
    ]
   },
   {
@@ -399,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "plt.hist(betas)\n",
     "plt.title(\"Distribution of Beta Parameter\")\n",
@@ -436,12 +568,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09edc734-83b4-40f9-aa82-2e785a6f06ea",
+   "cell_type": "markdown",
+   "id": "e22e6950-6576-43a0-936f-c74d5179773a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## References\n",
+    "\n",
+    "Koirala, Anil & Kizha, Anil Raj & Baral, Srijana. (2017). Modeling Height-Diameter Relationship and Volume of Teak (Tectona grandis L. F.) in Central Lowlands of Nepal. Journal of Tropical Forestry and Environment. 07. 28-42. 10.31357/jtfe.v7i1.3020. \n",
+    "\n",
+    "Birteeb, Peter & Ajit, & Varghese, Cini & Jaggi, Seema. (2020). Development and comparative diagnosis of conventional (linear/nonlinear) and artificial intelligence techniques-based predictive models for estimating timber volume of Tectona grandis. International Journal of Ecology and Environmental Sciences. 2. 1-11. "
+   ]
   }
  ],
  "metadata": {
