--- a/1_optimization_analysis.ipynb
+++ b/1_optimization_analysis.ipynb
@@ -40,6 +40,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9be5d62c-b9e1-4aa0-a5ce-e0f0f67f4c1f",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/tcone.png\" alt=\"alt text\" style=\"width: 300px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "52c88d2a-eb62-4131-9d34-701e55463577",
    "metadata": {},
    "source": [
@@ -162,16 +170,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9b25b25-a3d2-4104-aa85-d847a03c6859",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = cp.Variable(1, pos=True) # alpha parameter, target of interest"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "28a758c6-f2bc-4227-9ee1-044300badb8d",
    "metadata": {},
@@ -188,6 +186,7 @@
    "source": [
     "np.random.seed(6596) # NLP CU Denver Course number used as seed\n",
     "\n",
+    "a = cp.Variable(1, pos=True) # alpha parameter, target of interest\n",
     "objective=cp.sum_squares(h/3*np.pi*r**2 * a - V) # Objective Function\n",
     "constraints = [a>= 1, a<=3]\n",
     "prob = cp.Problem(cp.Minimize(objective), constraints)\n",
@@ -239,8 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print((-1+np.sqrt(1-4*(1-a.value)))/2)\n",
-    "print((-1-np.sqrt(1-4*(1-a.value)))/2)"
+    "print((-1-np.sqrt(1-4*(1-a.value)))/2)\n",
+    "print((-1+np.sqrt(1-4*(1-a.value)))/2)"
    ]
   },
   {
@@ -307,6 +306,7 @@
     "    X=X.assign(d2h = X['d']**2 * X['h'])\n",
     "    X[\"const\"] = np.ones(X.shape[0])\n",
     "    lm = sm.OLS(train.v, X).fit()\n",
+    "    \n",
     "    X_test = test[[\"d\", \"h\"]].copy()\n",
     "    X_test=X_test.assign(d2h = X_test['d']**2 * X_test['h'])\n",
     "    X_test[\"const\"] = np.ones(X_test.shape[0])\n",
@@ -327,7 +327,7 @@
    "outputs": [],
    "source": [
     "print(f\"Mean Alpha: {alphas.mean()}\")\n",
-    "print(f\"95% CI Alpha: {np.percentile(alphas, 2.5), np.percentile(alphas, 97.5)}\")"
+    "print(f\"95% Empirical Interval: {np.percentile(alphas, 2.5), np.percentile(alphas, 97.5)}\")"
    ]
   },
   {
@@ -338,18 +338,15 @@
    "outputs": [],
    "source": [
     "plt.hist(alphas)\n",
-    "plt.xlabel(\"Alpha\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa5f1bfb-bd1f-4fb5-8181-3c4aa827a162",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"T.Cone Mean RMSE: {rmses.mean()}\")\n",
-    "print(f\"LM Mean RMSE: {rmses_lm.mean()}\")"
+    "plt.xlabel(\"Alpha\")\n",
+    "plt.axvline(alphas.mean(), color='r', linestyle='--', linewidth=2)\n",
+    "plt.text(alphas.mean(), plt.ylim()[1]*.7, r'Mean $\\alpha$', rotation=90, color='r', verticalalignment='bottom', horizontalalignment='right')\n",
+    "\n",
+    "plt.axvline(np.percentile(alphas, 2.5), color='r', linestyle='--', linewidth=2)\n",
+    "plt.text(np.percentile(alphas, 2.5), plt.ylim()[1]*.7, r'2.5 percentile', rotation=90, color='r', verticalalignment='bottom', horizontalalignment='right')\n",
+    "\n",
+    "plt.axvline(np.percentile(alphas, 97.5), color='r', linestyle='--', linewidth=2)\n",
+    "plt.text(np.percentile(alphas, 97.5), plt.ylim()[1]*.7, r'97.5 percentile', rotation=90, color='r', verticalalignment='bottom', horizontalalignment='right')"
    ]
   },
   {
@@ -361,7 +358,9 @@
    "source": [
     "pd.DataFrame({\n",
     "    'Model' : [\"T. Cone\", \"Lin Reg\"],\n",
-    "    'Test RMSE' : np.round([rmses.mean(), rmses_lm.mean()], 3)\n",
+    "    'Mean Test RMSE' : np.round([rmses.mean(), rmses_lm.mean()], 3),\n",
+    "    'Low (2.5%)' : np.round([np.percentile(rmses, 2.5), np.percentile(rmses_lm, 2.5)], 3),\n",
+    "    'High (97.5%)' : np.round([np.percentile(rmses, 97.5), np.percentile(rmses_lm, 97.5)], 3)\n",
     "})"
    ]
   },
@@ -474,9 +473,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Average Observed Volume: {trees.v.mean()}\")\n",
-    "print(f\"Optimized Species Effect: {b.value[0]}\")\n",
-    "print(f\"Species Effect, Percent of Average Volume: {100*b.value[0]/trees.v.mean()}\")"
+    "print(f\"Average Observed Volume: {np.round(trees.v.mean(), 3)}\")\n",
+    "print(f\"Optimized Species Effect: {np.round(b.value[0], 3)}\")\n",
+    "print(f\"Species Effect, Percent of Average Volume: {np.round(100*b.value[0]/trees.v.mean(), 3)}\")"
    ]
   },
   {
@@ -520,8 +519,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Average Beta Value: {betas.mean()}\")\n",
-    "print(f\"Average Beta Value as Percent of Mean Volume: {100*betas.mean() / trees.v.mean()}\")"
+    "print(f\"Average Beta Value: {np.round(betas.mean(), 3)}\")\n",
+    "print(f\"Average Beta Value as Percent of Mean Volume: {np.round(100*betas.mean() / trees.v.mean(), 3)}\")"
    ]
   },
   {
@@ -531,8 +530,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "plt.hist(betas)\n",
     "plt.title(\"Distribution of Beta Parameter\")\n",
     "plt.xlabel(\"Beta\")\n",
@@ -544,7 +541,7 @@
    "id": "c3b6d519-9bd7-4092-81a4-185b7c12d9d4",
    "metadata": {},
    "source": [
-    "The resulting distribution of $\\beta$ values is centered on zero and has a roughly normal distribution. This matches what we would expect theoretically."
+    "The resulting distribution of $\\beta$ values is centered on zero and has a roughly normal distribution. This matches what we would expect theoretically based on the Central Limit Theorem."
    ]
   },
   {
