--- a/1_optimization_analysis.ipynb
+++ b/1_optimization_analysis.ipynb
@@ -339,14 +339,15 @@
    "source": [
     "plt.hist(alphas)\n",
     "plt.xlabel(\"Alpha\")\n",
+    "plt.ylabel(\"Frequency\")\n",
     "plt.axvline(alphas.mean(), color='r', linestyle='--', linewidth=2)\n",
     "plt.text(alphas.mean(), plt.ylim()[1]*.7, r'Mean $\\alpha$', rotation=90, color='r', verticalalignment='bottom', horizontalalignment='right')\n",
     "\n",
-    "plt.axvline(np.percentile(alphas, 2.5), color='r', linestyle='--', linewidth=2)\n",
-    "plt.text(np.percentile(alphas, 2.5), plt.ylim()[1]*.7, r'2.5 percentile', rotation=90, color='r', verticalalignment='bottom', horizontalalignment='right')\n",
+    "plt.axvline(np.percentile(alphas, 2.5), color='r', linestyle='--', linewidth=2, alpha=.6)\n",
+    "plt.text(np.percentile(alphas, 2.5), plt.ylim()[1]*.7, r'2.5 percentile', rotation=90, alpha=.6, color='r', verticalalignment='bottom', horizontalalignment='right')\n",
     "\n",
-    "plt.axvline(np.percentile(alphas, 97.5), color='r', linestyle='--', linewidth=2)\n",
-    "plt.text(np.percentile(alphas, 97.5), plt.ylim()[1]*.7, r'97.5 percentile', rotation=90, color='r', verticalalignment='bottom', horizontalalignment='right')"
+    "plt.axvline(np.percentile(alphas, 97.5), color='r', linestyle='--', linewidth=2, alpha=.6)\n",
+    "plt.text(np.percentile(alphas, 97.5), plt.ylim()[1]*.7, r'97.5 percentile', rotation=90, color='r', alpha=.6, verticalalignment='bottom', horizontalalignment='right')"
    ]
   },
   {
@@ -541,7 +542,7 @@
    "id": "c3b6d519-9bd7-4092-81a4-185b7c12d9d4",
    "metadata": {},
    "source": [
-    "The resulting distribution of $\\beta$ values is centered on zero and has a roughly normal distribution. This matches what we would expect theoretically based on the Central Limit Theorem."
+    "The resulting distribution of $\\beta$ values is centered on zero and has a roughly normal distribution. This matches what we would expect theoretically based on the Central Limit Theorem. "
    ]
   },
   {
@@ -573,7 +574,9 @@
     "\n",
     "Koirala, Anil & Kizha, Anil Raj & Baral, Srijana. (2017). Modeling Height-Diameter Relationship and Volume of Teak (Tectona grandis L. F.) in Central Lowlands of Nepal. Journal of Tropical Forestry and Environment. 07. 28-42. 10.31357/jtfe.v7i1.3020. \n",
     "\n",
-    "Birteeb, Peter & Ajit, & Varghese, Cini & Jaggi, Seema. (2020). Development and comparative diagnosis of conventional (linear/nonlinear) and artificial intelligence techniques-based predictive models for estimating timber volume of Tectona grandis. International Journal of Ecology and Environmental Sciences. 2. 1-11. "
+    "Birteeb, Peter & Ajit, & Varghese, Cini & Jaggi, Seema. (2020). Development and comparative diagnosis of conventional (linear/nonlinear) and artificial intelligence techniques-based predictive models for estimating timber volume of Tectona grandis. International Journal of Ecology and Environmental Sciences. 2. 1-11. \n",
+    "\n",
+    "https://stats.libretexts.org/Bookshelves/Probability_Theory/Book%3A_Introductory_Probability_(Grinstead_and_Snell)/09%3A_Central_Limit_Theorem/9.01%3A_Central_Limit_Theorem_for_Bernoulli_Trials#:~:text=Central%20Limit%20Theorem%20for,%CF%95(x)dx%20.&text=This%20theorem%20can%20be%20proved,k)%20given%20in%20Theorem%209.1."
    ]
   }
  ],
