--- a/1_optimization_analysis.ipynb
+++ b/1_optimization_analysis.ipynb
@@ -128,7 +128,15 @@
    "id": "b5f48213-45bd-4289-a411-957ee86d5b1d",
    "metadata": {},
    "source": [
-    "First, since $1+\\alpha+\\alpha^2$ is one-to-one over $[0,1]$, we can define $a=1+\\alpha+\\alpha^2$ and then use the optimal value of $a$ to uniquely solve for $\\alpha$. Then, if $\\alpha\\in[0,1]$, we know that $1+\\alpha+\\alpha^2$ is in the interval $[1, 3]$, so we convert the constraint from the previous problem to $a\\in[1,3]$\n",
+    "First, since $1+\\alpha+\\alpha^2$ is one-to-one over $[0,1]$, we can define $a=1+\\alpha+\\alpha^2$ and then use the optimal value of $a$ to uniquely solve for $\\alpha$. If $\\alpha\\in[0,1]$, we know that $1+\\alpha+\\alpha^2$ is in the interval $[1, 3]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d971e14-8e2b-4421-9641-57b68b8090c8",
+   "metadata": {},
+   "source": [
+    "So we convert the constraint from the previous problem to $a\\in[1,3]$\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
@@ -222,7 +230,7 @@
     "1+\\alpha+\\alpha^2 = a\n",
     "$$\n",
     "\n",
-    "Then, we use the quadratic formula and ignore the negative root that would correspond to an $\\alpha$ outside of $[0,1]$.\n",
+    "Then, we use the QUADRATIC FORMULA(!!) and ignore the negative root that would correspond to an $\\alpha$ outside of $[0,1]$.\n",
     "\n",
     "$$\n",
     "\\frac{-1\\pm\\sqrt{1-4*1*(1-a)}}{2}\n",
