--- a/1_optimization_analysis.ipynb
+++ b/1_optimization_analysis.ipynb
@@ -61,20 +61,13 @@
     "\n",
     "Where $V$ is the observed volume of the tree and $h$ is the observed height. Then, $r_1$ and $r_2$ are the radii of the base and top of the cone, respectively.\n",
     "\n",
-    "We will consider the upper radius to be a fraction of the lower radius. So, we introduce a parameter $\\alpha$ where $r_2 = \\alpha r_1, \\text{ for }\\alpha \\in (0,1)$. We will use a grid search to find an alpha that minimizes the fitted sum of squares. Let the lower tree radius be $r$ and the upper be $r_2$. Since $r_2 = \\alpha r$, we can write the volume as:\n",
+    "We will consider the upper radius to be a fraction of the lower radius. So, we introduce a parameter $\\alpha$ where $r_2 = \\alpha r_1, \\text{ for }\\alpha \\in (0,1)$. We will use a grid search to find an alpha that minimizes the fitted sum of squares. Let the lower tree radius be $r$ and the upper be $r_2$. Since $r_2 = \\alpha r$, using $\\hat V_i$ to represent the estimated volume of tree $i$, we can write the volume as:\n",
     "\n",
     "$$\n",
-    "V_i = \\frac{1}{3}\\cdot \\pi h_i r_i^2(1+\\alpha+\\alpha^2), \\;\\alpha\\in(0,1), i=1, ..., N\n",
+    "\\hat V_i = \\frac{1}{3}\\cdot \\pi h_i r_i^2(1+\\alpha+\\alpha^2), \\;\\alpha\\in(0,1), i=1, ..., N\n",
     "$$\n",
     "\n",
-    "Where $V_i$ is the observed volume of the $i$th tree, where $i$ equals $1, ..., N$ where $N$ is the total number of observations.\n",
-    "\n",
-    "Formulating this as an optimization problem, we seek to minimize the sum of squares of the residuals.\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\min &\\sum_{i=1}^N \\left(V_i - \\pi\\frac{h_i}{3} r_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
-    "    \\text{s.t. }&\\alpha\\in[0,1]\n",
-    "\\end{align*}"
+    "Where $V_i$ is the observed volume of the $i$th tree, where $i$ equals $1, ..., N$ where $N$ is the total number of observations."
    ]
   },
   {
@@ -82,13 +75,13 @@
    "id": "a38042a7-2e5d-45e8-a4e0-9d73e1e11efc",
    "metadata": {},
    "source": [
-    "The observed values are radius ($r_i$), height ($h_i$), and volume ($V_i$), for $i=1, ..., N$. Here, $N$ is the total number of observations (31 for the trees dataset).\n",
+    "Formulating this as an optimization problem, we seek to minimize the sum of squares of the residuals. The observed values are radius ($r_i$), height ($h_i$), and volume ($V_i$), for $i=1, ..., N$. Here, $N$ is the total number of observations (31 for the trees dataset).\n",
     "\n",
     "We want to minimize the sum of squared residuals, so our loss function is:\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "    \\min &\\sum_{i=1}^N \\left(V_i - \\pi\\frac{h_i}{3} r_i^2(1+\\alpha+\\alpha^2)\\right)^2\\\\\n",
+    "    \\min &\\sum_{i=1}^N \\left(\\pi\\frac{h_i}{3} r_i^2(1+\\alpha+\\alpha^2) - V_i\\right)^2\\\\\n",
     "    \\text{s.t. }&\\alpha\\in[0,1]\n",
     "\\end{align*}\n",
     "$$"
@@ -105,7 +98,7 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "    \\min &\\|V - \\pi\\frac{h}{3} r^2(1+\\alpha+\\alpha^2)\\|_2^2 \\\\\n",
+    "    \\min &\\|\\pi\\frac{h}{3} r^2(1+\\alpha+\\alpha^2)-V\\|_2^2 \\\\\n",
     "    \\text{s.t. }&0\\leq\\alpha\\leq 1\n",
     "\\end{align*}\n",
     "$$\n",
